--- a/public/main.html
+++ b/public/main.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=BIZ+UDMincho&family=Sofia+Sans+Condensed:wght@300&family=Blinker:wght@200&display=swap');
     * {
       margin: 0;
       padding: 0;
