--- a/public/main.html
+++ b/public/main.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>CHOY_PORTFOLIO</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=BIZ+UDMincho&family=Sofia+Sans+Condensed:wght@300&family=Blinker:wght@200&display=swap');
+    @font-face {
+    font-family: 'KyoboHandwriting2021sjy';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2212@1.0/KyoboHandwriting2021sjy.woff2') format('woff2');
+    }
     * {
       margin: 0;
       padding: 0;
@@ -15,7 +19,13 @@
   </style>
 </head>
 <body>
+  <!-- <nav class="nav">
+    <a href="/" class="nav_item" data-link>main</a>
+    <a href="/about" class="nav_item" data-link>about</a>
+    <a href="/portfolio" class="nav_item" data-link>portfolio</a>
+    <a href="/contact" class="nav_item" data-link>contact</a>
+  </nav> -->
   <div id="root"></div>
-  <script src="main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
