--- a/front/main.html
+++ b/front/main.html
@@ -26,6 +26,7 @@
     <a href="/contact" class="nav_item" data-link>contact</a>
   </nav> -->
   <div id="root"></div>
-  <script type="module" src="main.js"></script>
+  <!-- <script type="module" src="main.js" defer></script> -->
+  <script type="module" src="./src/index.js" defer></script>
 </body>
 </html>
