--- a/front/main.html
+++ b/front/main.html
@@ -6,25 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CHOY_PORTFOLIO</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=BIZ+UDMincho&family=Sofia+Sans+Condensed:wght@300&family=Blinker:wght@200&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=BIZ+UDMincho&family=Sofia+Sans+Condensed:wght@300&family=Blinker:wght@200&display=swap&family=Inconsolata:wght@500&display=swap');
     @font-face {
     font-family: 'KyoboHandwriting2021sjy';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2212@1.0/KyoboHandwriting2021sjy.woff2') format('woff2');
-    }
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+  };
+  @font-face {
+     font-family: 'S-CoreDream-3Light';
+     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff') format('woff');
+  } /* 에스코어드림 */
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  body {
+    margin: 0;
+    padding: 0;
+  }
   </style>
 </head>
 <body>
-  <!-- <nav class="nav">
-    <a href="/" class="nav_item" data-link>main</a>
-    <a href="/about" class="nav_item" data-link>about</a>
-    <a href="/portfolio" class="nav_item" data-link>portfolio</a>
-    <a href="/contact" class="nav_item" data-link>contact</a>
-  </nav> -->
   <div id="root"></div>
   <script type="module" src="./src/index.js" defer></script>
 </body>
