포폴페이지-버튼 스크롤 이동 작업중

--- a/front/main.html
+++ b/front/main.html
@@ -19,6 +19,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+  *::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
   }
   body {
     margin: 0;
