--- a/front/main.html
+++ b/front/main.html
@@ -34,5 +34,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="./src/index.js" defer></script>
+  <script data-cfasync="false" type="text/javascript"
+    src="./src/modules/form-submission-handler.js"></script>
 </body>
 </html>
