--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="./front/src/index.js" defer></script>
+  <script type="module" src="./front/src/index.js"></script>
 </body>
 </html>
